Fixed missing form link in FAQ summary and overflowing circle bug in header that pops up in apple chrome

--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,7 @@ section#mobile-app-splash {
     position: relative;
     padding-top: 2rem;
     z-index: 2;
+    overflow-x: clip;
 }
 
 #mobile-app-splash nav {
